Centrado y divisiones de cards, productos

--- a/index.html
+++ b/index.html
@@ -52,16 +52,25 @@
             <img src="img/pawprint.svg" alt="Patita">
             <h1>Productos Destacados</h1>
             <p>Comederos - Accesorios - Comida</p>
+            <div class="card-container">
+                <div class="card1">
+                    <img src="img/churrasquito.png" alt="Producto Churrasquito">
+                    <p>Juguete Churrasquito</p>
+                    <p class="price">$150</p>
+                </div>
 
-            <img src="img/churrasquito.png" alt="Producto Churrasquito">
-            <p>Juguete Churrasquito</p>
-            <p class="price">$150</p>
-            <img src="img/comedero.png" alt="Producto Comedero">
-            <p>Comedero para perro</p>
-            <p class="price">$250</p>
-            <img src="img/huesito.png" alt="Producto Huesito">
-            <p>Juguete Huesito</p>
-            <p class="price">$650</p>
+                <div class="card2">
+                    <img src="img/comedero.png" alt="Producto Comedero">
+                    <p>Comedero para perro</p>
+                    <p class="price">$250</p>
+                </div>
+
+                <div class="card3">
+                    <img src="img/huesito.png" alt="Producto Huesito">
+                    <p>Juguete Huesito</p>
+                    <p class="price">$650</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
