Mejoras en navbar y logo en footer, falta posicionarlo

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <a href="index.html"><img src="img/logo.png" alt="Logo" class="logo"></a>
                 <ul>
                     <li><i class="fa-solid fa-paw"></i><span>Categorias</span></li>
-                    <li><img src="img/pawprint.png" alt="Huellita"><span>Pets</span></li>
-                    <li><img src="img/pawprint.png" alt="Huellita"><span>Nosotros</span></li>
-                    <li><img src="img/pawprint.png" alt="Huellita"><span>Contactanos</span></li>
+                    <li><i class="fa-solid fa-paw"></i><span>Pets</span></li>
+                    <li><i class="fa-solid fa-paw"></i><span>Nosotros</span></li>
+                    <li><i class="fa-solid fa-paw"></i><span>Contactanos</span></li>
                 </ul>
             </nav>
         </section>
@@ -85,6 +85,9 @@
             <i class="fa-regular fa-envelope"></i>
             <h2>Correo Electrónico</h2>
             <p>Dirección de correo</p>
+        </div>
+        <div class="logo-footer">
+            <a href="index.html"><img src="img/logo-inverso.png" alt="Logo" class="logo"></a>
         </div>
         <div class="footer-end">
             <span>&copy;Todos los derechos reservados Front End</span>
