Agrego menú hamburguesa, faltan estilos y resolver lo de click y despliegue

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </ul>
         </section>
         <section class="header-container-nav">
+            <i class="fa fa-bars burger-menu"></i>
             <nav class="nav-links">
                 <a href="index.html"><img src="img/logo.png" alt="Logo" class="logo"></a>
                 <ul>
