--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <p class="cat-productos">Comederos - Accesorios - Comida</p>
 
             <div class="card-container">
-                <div class="card1">
+                <div class="card">
                     <img src="img/churrasquito.png" alt="Producto Churrasquito">
                     <p>Juguete Churrasquito</p>
                     <p class="price">$150</p>
                 </div>
 
-                <div class="card2">
+                <div class="card">
                     <img src="img/comedero.png" alt="Producto Comedero">
                     <p>Comedero para perro</p>
                     <p class="price">$250</p>
                 </div>
 
-                <div class="card3">
+                <div class="card">
                     <img src="img/huesito.png" alt="Producto Huesito">
                     <p>Juguete Huesito</p>
                     <p class="price">$650</p>
