Correcion imagen logo-footer >480

--- a/index.html
+++ b/index.html
@@ -77,18 +77,23 @@
     </main>
     <footer>
         <div class="icons">
-            <i class="fa-solid fa-location-dot"></i>
-            <h2>Localidad</h2>
-            <p>Calle, Departamento</p>
-            <i class="fa-solid fa-phone"></i>
-            <h2>Teléfono</h2>
-            <p>Número de teléfono</p>
-            <i class="fa-regular fa-envelope"></i>
-            <h2>Correo Electrónico</h2>
-            <p>Dirección de correo</p>
+            <div class="icons-contacto">
+                <i class="fa-solid fa-location-dot"></i>
+                <i class="fa-solid fa-phone"></i>
+                <i class="fa-regular fa-envelope"></i>
+            </div>
+            <div class="contacto">
+                <h2>Localidad</h2>
+                <p>Calle, Departamento</p>
+                <h2>Teléfono</h2>
+                <p>Número de teléfono</p>
+                <h2>Correo Electrónico</h2>
+                <p>Dirección de correo</p>
+            </div>
         </div>
+
         <div class="logo-footer">
-            <a href="index.html"><img src="img/logo-inverso.png" alt="Logo" class="logo"></a>
+            <a href="index.html"><img src="img/logo-inverso.png" alt="Logo" class="logo-footer"></a>
         </div>
     </footer>
     <div class="footer-end">
