Agrego form, faltan estilos

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
                     <p class="price">$650</p>
                 </div>
             </div>
+            <div class="form">
+                <form>
+                    <h2>Contáctanos</h2>
+                    <input id="nombre" type="text" name="name" placeholder="Nombre y Apellido" required>
+                    <input id="mail" type="mail" name="email" placeholder="Ingresá tu correo eletrónico" required>
+                    <input id="telefono" type="text" name="phone" placeholder="Teléfono" required>
+                </form>
+                <div class="btn">
+                    <button type="reset">Resetear</button>
+                    <button id="btn-enviar" type="submit">Enviar</button>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
