Estilos para el form

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <input id="telefono" type="text" name="phone" placeholder="Teléfono" required>
                 </form>
                 <div class="btn">
-                    <button type="reset">Resetear</button>
-                    <button id="btn-enviar" type="submit">Enviar</button>
+                    <button type="reset" class="btn-reset">Resetear</button>
+                    <button id="btn-enviar" type="submit" class="btn-send">Enviar</button>
                 </div>
             </div>
         </section>
