Agrego div naranja previo al footer, falta icono e input

--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
                     <input id="telefono" type="text" name="phone" placeholder="Teléfono" required>
                 </form>
                 <div class="btn">
-                    <button type="reset" class="btn-reset">Resetear</button>
-                    <button id="btn-enviar" type="submit" class="btn-send">Enviar</button>
+                    <button type="reset" id="btn-reset">Resetear</button>
+                    <button type="submit" id="btn-send">Enviar</button>
                 </div>
             </div>
         </section>
+        <div class="pre-footer"></div>
     </main>
     <footer>
         <div class="icons">
