Correcciones responsivas y agrego contenido en pre-footer

--- a/index.html
+++ b/index.html
@@ -81,12 +81,21 @@
                     <input id="telefono" type="text" name="phone" placeholder="Teléfono" required>
                 </form>
                 <div class="btn">
-                    <button type="reset" id="btn-reset">Resetear</button>
-                    <button type="submit" id="btn-send">Enviar</button>
+                    <button id="btn-reset" type="reset">Resetear</button>
+                    <button id="btn-send" type="submit">Enviar</button>
                 </div>
             </div>
         </section>
-        <div class="pre-footer"></div>
+        <div class="pre-footer">
+            <div class="pre-1">
+                <img src="img/mail-icon.png" alt="Icono Mail">
+                <h3>Suscríbete para más novedades</h3>
+            </div>
+            <div class="pre-2">
+                <input type="text" name="" id="search-input" placeholder="Ingresá tu correo electrónico">
+                <button type="submit">Suscribirme</button>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="icons">
