Correccion en los botones, ahora funcionan.

--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                     <p class="price">$650</p>
                 </div>
             </div>
-            <div class="form">
+            <div class="form" method="POST">
                 <form>
                     <h2>Contáctanos</h2>
                     <input id="nombre" type="text" name="name" placeholder="Nombre y Apellido" required>
                     <input id="mail" type="mail" name="email" placeholder="Ingresá tu correo eletrónico" required>
                     <input id="telefono" type="tel" name="phone" placeholder="Teléfono" required>
+                    <div class="btn">
+                        <button class="btn-reset" type="reset">Resetear</button>
+                        <button class="btn-send" type="submit">Enviar</button>
+                    </div>
                 </form>
-                <div class="btn">
-                    <button class="btn-reset" type="reset">Resetear</button>
-                    <button class="btn-send" type="submit">Enviar</button>
-                </div>
             </div>
         </section>
         <div class="pre-footer">
