--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/cbea915c99.js" crossorigin="anonymous"></script>
+
+    <!--  Favicon -->
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -52,11 +55,11 @@
     </section>
     <main>
         <section id="Banner">
-        <div class="banner-textos">
-            <h2>¡Es un placer tenerte aquí!</h2>
-            <p>¡Comederos en descuento!</p>
-            <button>COMEDEROS</button>
-        </div>
+            <div class="banner-textos">
+                <h2>¡Es un placer tenerte aquí!</h2>
+                <p>¡Comederos en descuento!</p>
+                <button>COMEDEROS</button>
+            </div>
         </section>
 
         <section id="Productos">
